# dogfight-challenge

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RULES.md  modal_dashboard.py  modal_train.py  policy.onnx  policy.onnx.data
baselines/: ace.onnx  brawler.onnx  chaser.onnx  do_nothing.onnx  dogfighter.onnx
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  sweep.rs
crates/pyenv/: Cargo.toml  Cargo.workspace.toml  pyproject.toml
crates/pyenv/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/shared/: Cargo.toml
crates/sim/: Cargo.toml
crates/validator/: Cargo.toml
experiments/: TRAINING_RUNS.md  log_experiment.py  registry.json
experiments/configs/: curriculum_baseline.json  selfplay_v1.json  selfplay_v2.json  unified_dr_gpu_v1.json  unified_dr_gpu_v2.json  unified_dr_gpu_v3.json  unified_dr_v1.json  unified_v1.json
sim-lab/: candidate_sim.py  diagnostics.py  download_data.py  evaluate.py  experiment_log.py  generate_synthetic_data.py  lab.py  metrics.py  preprocess.py  run_loop.py  scenarios.py  search_strategy.py  sim_interface.py  visualize.py
training/: arena_tournament.py  behavioral_cloning.py  eval.py  export_onnx.py  head2head.py  model.py  naming.py  opponent_pool.py  parse_tb.py  requirements.txt  slack.py  train.py  train_selfplay.py  train_unified.py  train_unified_dr.py  utils.py
training/gpu_sim/: __init__.py  constants.py  env.py  kernels.py  opponents.py  test_parity.py
viz/: package-lock.json  package.json  tsconfig.tsbuildinfo
viz/app/: globals.css  layout.tsx  page.tsx
(+52 files in other folders)
