[package]
name = "dogfight-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dogfight-shared = { path = "../shared" }
dogfight-sim = { path = "../sim" }
dogfight-validator = { path = "../validator" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
